// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeTranform can accept custom styles 1`] = `
<div
  style={
    Object {
      "background": "black",
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform renders 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform sets finish 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform sets start 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform sets transitionDelay with delay prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "1000ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform sets transitionDuration with duration prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "1000ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease",
      "willChange": "transform, opacity",
    }
  }
/>
`;

exports[`FadeTranform sets transitionTimingFunction with timingFn prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": undefined,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform, opacity",
      "transitionTimingFunction": "ease-in-out",
      "willChange": "transform, opacity",
    }
  }
/>
`;
